refactor: setup request validation middleware
