# src/modules/validate/validate.middleware.ts
@@ -2,7 +2,7 @@ import { Request, Response, NextFunction } from 'express';
 import Joi from 'joi';
 import httpStatus from 'http-status';
 import pick from '../utils/pick.js';
-import ApiError from '../errors/ApiError.js';
+import ApiError, { IApiErrorDetail } from '../errors/ApiError.js';
 
 const validate =
   (schema: Record<string, any>) =>
@@ -11,11 +11,18 @@ const validate =
     const object = pick(req, Object.keys(validSchema));
     const { value, error } = Joi.compile(validSchema)
       .prefs({ errors: { label: 'key' } })
-      .validate(object);
+      .validate(object, { abortEarly: false });
 
     if (error) {
       const errorMessage = error.details.map((details) => details.message).join(', ');
-      return next(new ApiError(httpStatus.BAD_REQUEST, errorMessage));
+      const errorDetails: IApiErrorDetail[] = error.details.map((detail) => {
+        return {
+          message: detail.message,
+          field: detail.context?.key || '',
+          value: detail.context?.value || '',
+        };
+      });
+      return next(new ApiError(httpStatus.BAD_REQUEST, errorMessage, true, '', errorDetails));
     }
     Object.assign(req, value);
     return next();
